--- a/local.properties
+++ b/local.properties
@@ -4,6 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Jun 11 23:42:34 NPT 2019
-ndk.dir=E\:\\sdk\\Sdk\\ndk-bundle
-sdk.dir=E\:\\sdk\\Sdk
+#Fri Jun 14 09:05:46 NPT 2019
+sdk.dir=C\:\\Users\\user\\AppData\\Local\\Android\\Sdk
